# jobscheduler

./: .dockerignore  .env  .env.test  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  project_purpose_and_architecture.md  suggested_commands.md  system_utilities_darwin.md  task_completion_workflow.md  tech_stack_and_dependencies.md
src/cli/: __main__.py  client.py  formatters.py
src/executor/: __main__.py  docker_manager.py  executor.py  settings.py
src/scheduler/: __main__.py  api.py  app.py  leadership.py  scheduler.py  settings.py
src/shared/: __init__.py  config.py  executor_manager.py  job_manager.py  logging_config.py  models.py  redis_client.py  utils.py
tests/e2e/: __init__.py  conftest.py  test_basic_job_lifecycle.py  test_resource_management.py
tests/executor/: __init__.py
tests/shared/: test_models.py  test_redis_client.py
